--- a/src/app/pages/chordmaker/info/chordmaker-info.component.html
+++ b/src/app/pages/chordmaker/info/chordmaker-info.component.html
@@ -4,7 +4,7 @@
         <ion-row>
             <ion-col size="3"> </ion-col>
             <ion-col size="6" class="center title">
-                <ion-text color="dark"> Chordmaker Info </ion-text>
+                <ion-text color="dark"> {{'chordmaker.main.title' | translate }} Info</ion-text>
             </ion-col>
             <ion-col size="3" class="center">
                 <ion-fab-button (click)="modalController.dismiss()" class="action-button" color="ruby">
@@ -14,31 +14,29 @@
         </ion-row>
     </ion-grid>
 
-    <ion-card class="tile-light">
+    <ion-card class="tile-light" style="margin-top: 0;">
         <ion-card-header>
             <ion-card-title color="dark">
-                What is Chordmaker?
+                {{'chordmaker.info.card1.what' | translate }}
             </ion-card-title>
         </ion-card-header>
         <ion-card-content>
-            Chordmaker is a free chord encyclopedia where you can search for chords and their features by selecting
-            thier notes.
+            {{'chordmaker.info.card1.text' | translate }}
         </ion-card-content>
     </ion-card>
 
     <ion-card class="tile-light">
         <ion-card-header>
             <ion-card-title color="dark">
-                How to use it?
+                {{'chordmaker.info.card2.how' | translate }}
+
             </ion-card-title>
         </ion-card-header>
         <ion-card-content>
-            <ion-card-subtitle>SELECT</ion-card-subtitle>
+            <ion-card-subtitle> {{'chordmaker.info.card2.select' | translate }} </ion-card-subtitle>
             <ion-text>
-                You can select a note by clicking on it.
-                The first note will be the tonic of your chord.
+                {{'chordmaker.info.card2.select-text' | translate }}
             </ion-text>
-
 
             <ion-grid style="padding-left: 0; padding-right: 0; margin-top: 0.5rem; margin-bottom: 0.5rem;">
                 <ion-row>
@@ -88,10 +86,10 @@
                 </ion-row>
             </ion-grid>
 
-            <ion-card-subtitle>FIND</ion-card-subtitle>
+            <ion-card-subtitle> {{'chordmaker.info.card2.search' | translate }} </ion-card-subtitle>
             <ion-text>
-                All the chords found with the combinations on notes selected will be displayed.
-                Click on a chord to see all its traits and infos.
+                {{'chordmaker.info.card2.search-text' | translate }}
+
             </ion-text>
 
             <ion-card class="chord">
@@ -101,6 +99,6 @@
         </ion-card-content>
     </ion-card>
 
-    <explain-buttons [buttons]="buttons"></explain-buttons>
+    <explain-buttons [buttons]="buttons" [context]="'chordmaker'"></explain-buttons>
 
 </ion-content>
