--- a/src/app/pages/settings/main/settings.page.html
+++ b/src/app/pages/settings/main/settings.page.html
@@ -77,7 +77,7 @@
           <ion-icon name="moon" slot="start"></ion-icon>
           <ion-label>{{'settings.main.darkmode' | translate}}</ion-label>
 
-          <ion-toggle slot="end" color="ruby" [(ngModel)]="darkmode" (ionChange)="setDarkmode()"></ion-toggle>
+          <ion-toggle slot="end" color="ruby" [(ngModel)]="global.darkmode" (ionChange)="setDarkmode()"></ion-toggle>
         </ion-item>
       </ion-col>
     </ion-row>
