--- a/src/app/pages/metronome/metro-modal/metro-modal.component.html
+++ b/src/app/pages/metronome/metro-modal/metro-modal.component.html
@@ -4,8 +4,8 @@
   <ion-grid>
     <ion-row>
       <ion-col size="4" class="center">
-        <ion-fab-button [ngClass]="'action-button ' + metronome.train.class" (click)="pauseMetronome()">
-          <ion-icon size="large" name="pause"></ion-icon>
+        <ion-fab-button [ngClass]="'action-button ' + metronome.train.class" (click)="stopMetronome()">
+          <ion-icon size="large" name="stop"></ion-icon>
         </ion-fab-button>
       </ion-col>
       <ion-col size="4" class="center">
