metronome on time icons and sounds replaced

--- a/src/app/pages/metronome/main/metronome.page.html
+++ b/src/app/pages/metronome/main/metronome.page.html
@@ -131,18 +131,18 @@
             <ion-list slot="content" style="background: var(--ion-color-light);">
               <ion-grid>
                 <ion-row #beats class="center">
-                  <ion-col size="6">
+                  <ion-col size="5">
                     <ion-text class="side-text">{{'metronome.main.beats' | translate }}</ion-text>
                   </ion-col>
-                  <ion-col size="2" class="ion-no-padding">
+                  <ion-col size="7/3" class="ion-no-padding">
                     <ion-fab-button size="small" color="ruby" class="action-button" (click)="trackRemoveBeat(track)">
                       <ion-icon name="remove"></ion-icon>
                     </ion-fab-button>
                   </ion-col>
-                  <ion-col size="2" class="center ion-no-padding">
+                  <ion-col size="7/3" class="center ion-no-padding">
                     <ion-text>{{track.beats}}</ion-text>
                   </ion-col>
-                  <ion-col size="2" class="ion-no-padding">
+                  <ion-col size="7/3" class="ion-no-padding">
                     <ion-fab-button size="small" color="ruby" class="action-button" (click)="trackAddBeat(track)">
                       <ion-icon name="add"></ion-icon>
                     </ion-fab-button>
@@ -150,20 +150,20 @@
                 </ion-row>
 
                 <ion-row #color class="center">
-                  <ion-col size="6">
+                  <ion-col size="5">
                     <ion-text class="side-text">{{'metronome.main.color' | translate }}</ion-text>
                   </ion-col>
-                  <ion-col size="2" class="ion-no-padding">
+                  <ion-col size="7/3" class="center ion-no-padding">
                     <ion-fab-button size="small" color="ruby" class="action-button" (click)="trackRemoveColor(track)">
                       <ion-icon name="caret-back"></ion-icon>
                     </ion-fab-button>
                   </ion-col>
-                  <ion-col size="2" class="center ion-no-padding">
-                    <ion-fab-button size="small" [color]="track.color" class="action-button">
+                  <ion-col size="7/3" class="center ion-no-padding">
+                    <ion-fab-button size="small" [color]="track.color" class="action-button" style="margin:0 auto;">
 
                     </ion-fab-button>
                   </ion-col>
-                  <ion-col size="2" class="ion-no-padding">
+                  <ion-col size="7/3" class="center ion-no-padding">
                     <ion-fab-button size="small" color="ruby" class="action-button" (click)="trackAddColor(track)">
                       <ion-icon name="caret-forward"></ion-icon>
                     </ion-fab-button>
@@ -171,20 +171,20 @@
                 </ion-row>
 
                 <ion-row #sound class="center">
-                  <ion-col size="6">
+                  <ion-col size="5">
                     <ion-text class="side-text">{{'metronome.main.sound' | translate }}</ion-text>
                   </ion-col>
-                  <ion-col size="2" class="ion-no-padding">
+                  <ion-col size="7/3" class="ion-no-padding">
                     <ion-fab-button size="small" color="ruby" class="action-button" (click)="trackRemoveSound(track)">
                       <ion-icon name="caret-back"></ion-icon>
                     </ion-fab-button>
                   </ion-col>
-                  <ion-col size="2" class="center ion-no-padding">
+                  <ion-col size="7/3" class="center ion-no-padding">
                     <ion-icon size="large" src="assets/instruments-icons/{{track.sound}}.svg"
                       style="fill: var(--ion-color-medium);">
                     </ion-icon>
                   </ion-col>
-                  <ion-col size="2" class="ion-no-padding">
+                  <ion-col size="7/3" class="ion-no-padding">
                     <ion-fab-button size="small" color="ruby" class="action-button" (click)="trackAddSound(track)">
                       <ion-icon name="caret-forward"></ion-icon>
                     </ion-fab-button>
